destination-rules/label-based-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: stage-product-detail-api
spec:
  host: stage-product-detail-api
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
  subsets:
  - labels:
      app: product-detail-api
      version: v1
    name: stage
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
